--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+	"analyze": "npx vite-bundle-visualizer"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.80.7",
@@ -15,9 +16,14 @@
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-toastify": "^11.0.5",
     "tailwindcss-animate": "^1.0.7",
     "viem": "~2.31.0",
+    "vite-plugin-html": "^3.2.2",
+    "vite-plugin-pages": "^0.33.0",
+    "vite-plugin-sitemap": "^0.8.2",
+    "vite-ssg": "^27.0.1",
     "wagmi": "^2.15.6"
   },
   "devDependencies": {
